2006-11-29  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Ignore tar exit with status 1.

2006-11-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindexd.c (clean_backslash): New function use to unescape
						 '\' characters in index files.

2006-11-29  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c (search_tapes): Fix prompt_out setting.

2006-11-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (copy_file): Fix compilation error.

2006-11-24  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup-dump.c, client-src/sendbackup-gnutar.c,
	  client-src/sendsize.c,
	  server-src/amindexd.c: Patch for gcc-3.2.3 to compile the new
				 vstralloc macro.

2006-11-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/file.c (old_sanitise_filename): New function.
	* common-src/amanda.h (old_sanitise_filename): Prototype.
	* common-src/util.c (copy_file): New function.
	* common-src/util.h (copy_file): Prototype.
	* server-src/diskfile.c: Check that two DLE doesn't get the same
				 sanitized filename.
	* server-src/amindex.c (getoldindexfname): New function.
	* server-src/amindex.h (getoldindexfname): prototype.
	* server-src/amindexd.c: Use the old sanitized filename if the new
				 file doesn't exist.
	* server-src/amcheck.c: Call check_infofile.
	* server-src/planner.c: Call check_infofile.
	* server-src/server_util.c (check_infofile): New function, will copy
			 the old sanitizes info file if the new doesn't exist.
	* server-src/server_util.h (check_infofile): Prototype.

2006-11-23  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c (tcpm_recv_token): amanda protocol
	  packet can be larger than NETWORK_BLOCK_BYTES

2006-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Open the amandates file after the
				 <config>/amanda-client.conf file is loaded.

2006-11-20  Jean-Louis Martineau <martineau@zmanda.com>