@@ -64,6 +64,12 @@ MAILER=@MAILER@
 ONLINEREGEX="ONLINE|READY|sense[_ ]key[(]0x0[)]|sense key error = 0|^er=0$|, mt_erreg: 0x0|^Current Driver State: at rest$"
 REPORTTO=`amgetconf$SUF mailto`
 tape=`amgetconf$SUF tapedev`
+
+if [ -z "$tape" ]; then
+  echo "<none> tapedev not specified in amanda.conf."
+  exit 2
+fi
+
 ORG=`amgetconf$SUF ORG`
 
 firstslot=1
