@@ -23,7 +23,7 @@
  * Authors: the Amanda Development Team.  Its members are listed in a
  * file named AUTHORS, in the root directory of this distribution.
  */
-/* $Id: taper.c,v 1.144.2.3 2006/10/24 17:51:28 martinea Exp $
+/* $Id: taper.c,v 1.144.2.4 2006/11/29 12:36:16 martinea Exp $
  *
  * moves files from holding disk to tape, or from a socket to tape
  */
@@ -709,10 +709,12 @@ file_reader_side(
     taper_timestamp = newstralloc(taper_timestamp, cmdargs.argv[2]);
 
     if (tapedev == NULL) {
-	putresult(TAPE_ERROR, "[No tapedev defined]\n");
-	log_add(L_ERROR, "No tapedev defined");
-	dbprintf(("taper: No tapedev defined\n"));
-	exit(1);
+	if (getconf_str(CNF_TPCHANGER) == NULL) {
+	    putresult(TAPE_ERROR, "[No tapedev or tpchanger defined]\n");
+	    log_add(L_ERROR, "No tapedev or tpchanger defined");
+	    dbprintf(("taper: No tapedev or tpchanger defined\n"));
+	    exit(1);
+	}
     } else {
 	tapedev = stralloc(tapedev);
     }
